--- a/config.conf
+++ b/config.conf
@@ -22,16 +22,16 @@ print_info() {
     info "GPU" gpu
     info "Memory" memory
 
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
-    # info "Disk" disk
-    # info "Battery" battery
+    info "GPU Driver" gpu_driver  # Linux/macOS only
+    info "CPU Usage" cpu_usage
+    info "Disk" disk
+    info "Battery" battery
     # info "Font" font
     # info "Song" song
-    # info "Local IP" local_ip
-    # info "Public IP" public_ip
+    info "Local IP" local_ip
+    info "Public IP" public_ip
     # info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
+    info "Locale" locale  # This only works on glibc systems.
 
     info line_break
     info cols
@@ -123,7 +123,7 @@ package_managers="on"
 # Example:
 # on:  '/bin/bash'
 # off: 'bash'
-shell_path="off"
+shell_path="on"
 
 # Show $SHELL version
 #
@@ -159,7 +159,7 @@ speed_type="bios_limit"
 # Example:
 # on:    'i7-6500U (4) @ 3.1GHz'
 # off:   'i7-6500U (4) @ 3.100GHz'
-speed_shorthand="off"
+speed_shorthand="on"
 
 # Enable/Disable CPU brand in output.
 #
@@ -196,7 +196,7 @@ cpu_speed="on"
 # logical:  'Intel i7-6500U (4) @ 3.1GHz' (All virtual cores)
 # physical: 'Intel i7-6500U (2) @ 3.1GHz' (All physical cores)
 # off:      'Intel i7-6500U @ 3.1GHz'
-cpu_cores="logical"
+cpu_cores="physical"
 
 # CPU Temperature
 # Hide/Show CPU temperature.
@@ -213,7 +213,7 @@ cpu_cores="logical"
 # C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
 # F:   'Intel i7-6500U (4) @ 3.1GHz [82.0°F]'
 # off: 'Intel i7-6500U (4) @ 3.1GHz'
-cpu_temp="off"
+cpu_temp="C"
 
 
 # GPU
@@ -262,7 +262,7 @@ gpu_type="all"
 # Example:
 # on:  '1920x1080 @ 60Hz'
 # off: '1920x1080'
-refresh_rate="off"
+refresh_rate="on"
 
 
 # Gtk Theme / Icons / Font
