--- a/config.conf
+++ b/config.conf
@@ -20,18 +20,18 @@ print_info() {
     info "Terminal Font" term_font
     info "CPU" cpu
     info "GPU" gpu
-
-    info "GPU Driver" gpu_driver  # Linux/macOS only
-    info "CPU Usage" cpu_usage
     info "Memory" memory
-    info "Disk" disk
-    info "Battery" battery
+
+    # info "GPU Driver" gpu_driver  # Linux/macOS only
+    # info "CPU Usage" cpu_usage
+    # info "Disk" disk
+    # info "Battery" battery
     # info "Font" font
     # info "Song" song
-    info "Local IP" local_ip
-    info "Public IP" public_ip
+    # info "Local IP" local_ip
+    # info "Public IP" public_ip
     # info "Users" users
-    info "Locale" locale  # This only works on glibc systems.
+    # info "Locale" locale  # This only works on glibc systems.
 
     info line_break
     info cols
